--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -196,9 +196,9 @@
     \noindent then the image is a natural image, otherwise it contains an hidden
     message. All the proofs are in \cite{detecting-lsb-steganography}.
 
-    \subsubsection{DCT Domain embedding method (JPEG)}
-    The DCT Domain embedding method works on \emph{JPEG} images, one of the most
-    used format on Internet web sites.
+    \subsubsection{JPEG steganalysis}
+    \paragraph{DCT Domain embedding method} works on \emph{JPEG} images, one of
+    the most used format on Internet web sites.
     The JPEG format uses a \emph{discrete cosine transform} (DCT) to transform
     every 8x8-pixel block into 64 DCT coefficients, that are used to calculate
     the pixels when the image is displayed.
@@ -206,8 +206,7 @@
     coefficients with the secret message: since the modification is done in the
     frequency domain, there is no human perceivable change in the image
     \cite{jpeg-image-internet}.
-
-    \subsubsection{Chi-square test}
+    \paragraph{Chi-square test}
 
 
     \subsection{Audio}
