--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -209,7 +209,8 @@
     modification is done in the frequency domain, there is no human perceivable
     change in the image.
     However, this modifications can be detect by analyzing the DCT coefficients
-    which change significantly with respect to a natural image.
+    which change significantly with respect to a natural image
+    \cite{jpeg-image-internet}.
     \paragraph{Chi-square test} is a statistical steganalysis test, which aims
     at determining whether an image shows distorsion from embedding hidden data.
     \begin{enumerate}
@@ -234,7 +235,7 @@
     modify the coefficients not sequentially or following different orders, so
     the steganalysis process is usually performed by calculating the probability
     of the presence of an embedded message considering different portions of the
-    image at the same time.
+    image at the same time \cite{jpeg-image-internet}.
     
 
 
