--- a/report/sections/01_Introduction/01_Introduction.tex
+++ b/report/sections/01_Introduction/01_Introduction.tex
@@ -46,9 +46,9 @@ Moreover, the embedded information can also be crypted, in that case the
 attacker (the one who tries to find the hidden message) will have to perform
 cryptanalysis in order to decrypt the information.
 
-The Field on Information Security Systems is indeed vast and will require much more space than the one we have.
-Here we attach a map which describes shortly the structure.
-
+The Field on Information Security Systems is indeed vast and will require much
+more space than the one we have. Here we attach a map which describes shortly
+the structure.
 
 \begin{figure}[h]
     \centering
