Updated front page

--- a/report/main.tex
+++ b/report/main.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 
-\usepackage[margin=1.2in]{geometry}
+\usepackage[margin=0.8in]{geometry}
 \usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{tcolorbox}
@@ -25,9 +25,20 @@ Orlando, Giulia Rivetti}
 \date{}
 
 \begin{document}
-    \maketitle
-
-    \pagebreak
+    \begin{center}
+        \Large
+        \textbf{Steganalysis}
+            
+        \vspace{0.4cm}
+        \large
+        Cybersecurity and National Defence
+            
+        \vspace{0.4cm}
+        \textbf{Alberto Eusebio, Francesco Imparato, Federico Morro,\\
+        Salvatore Orlando, Giulia Rivetti}
+        
+        \vspace{0.6cm}
+    \end{center}
 
     \subfile{sections/00_Abstract/00_Abstract.tex}
     \tableofcontents
