--- a/report/sections/00_Abstract/00_Abstract.tex
+++ b/report/sections/00_Abstract/00_Abstract.tex
@@ -1,7 +1,9 @@
 \documentclass[../../main.tex]{subfiles}
 
 \begin{document}
-    \section*{Abstract}
+    \begin{abstract}
+        
+    \end{abstract}
 
     \pagebreak
 \end{document}
