--- a/report/sections/01_Introduction/01_Introduction.tex
+++ b/report/sections/01_Introduction/01_Introduction.tex
@@ -6,9 +6,9 @@
 
 Steganography is the technique of hiding a message inside another message or a
 physical object.\cite{steganography-definition}
-The word \textit{steganography} comes from the Greek word
-\textit{steganographia}, which is the combination of \textit{steganós} meaning
-``covered'' and \textit{-graphia} meaning ``writing''.
+The word \emph{steganography} comes from the Greek word
+\emph{steganographia}, which is the combination of \emph{steganós} meaning
+``covered'' and \emph{-graphia} meaning ``writing''.
 
 The first testimonials of the use of steganography date back to 440 BC in Greece
 mentioned by Herodotus in his \emph{Histories}: Histitateus sent a message to
