Updated font size, abstract

--- a/report/main.tex
+++ b/report/main.tex
@@ -45,9 +45,11 @@ Orlando, Giulia Rivetti}
 
     \pagebreak
     
-    \subfile{sections/01_Introduction/01_Introduction.tex}
-    \subfile{sections/02_Steganography/02_Steganography.tex}
-    \subfile{sections/03_Steganalysis/03_Steganalysis.tex}
+    \begin{small}
+        \subfile{sections/01_Introduction/01_Introduction.tex}
+        \subfile{sections/02_Steganography/02_Steganography.tex}
+        \subfile{sections/03_Steganalysis/03_Steganalysis.tex}
+    \end{small}
 
     \printbibliography
 \end{document}
