Improved structure of document

--- a/report/main.tex
+++ b/report/main.tex
@@ -49,7 +49,11 @@ Orlando, Giulia Rivetti}
         \subfile{sections/01_Introduction/01_Introduction.tex}
         \subfile{sections/02_Steganography/02_Steganography.tex}
         \subfile{sections/03_Steganalysis/03_Steganalysis.tex}
+        % -- decomment if added \subfile{sections/04_Results/04_Results.tex}
+        \subfile{sections/05_Conclusions/05_Conclusions.tex}
     \end{small}
+
+    \pagebreak
 
     \printbibliography
 \end{document}
