--- a/report/sections/05_Conclusions/05_Conclusions.tex
+++ b/report/sections/05_Conclusions/05_Conclusions.tex
@@ -1,9 +1,8 @@
 \documentclass[../../main.tex]{subfiles}
 
 \begin{document}
-    \section{The chapter name}
-    \textbf{Hello world!}
-    Hello, here is some text without a meaning...
+\section{Conclusions}
 
-    \pagebreak
+
+
 \end{document}
