Draft for the abstract

--- a/report/main.tex
+++ b/report/main.tex
@@ -25,8 +25,8 @@
         Cybersecurity and National Defence
             
         \vspace{0.4cm}
-        \textbf{Alberto Eusebio, Francesco Imparato, Federico Morro,\\
-        Salvatore Orlando, Giulia Rivetti}
+        Alberto Eusebio, Francesco Imparato, Federico Morro,\\
+        Salvatore Orlando, Giulia Rivetti
         
         \vspace{1cm}
     \end{center}
