--- a/report/sections/00_Abstract/00_Abstract.tex
+++ b/report/sections/00_Abstract/00_Abstract.tex
@@ -1,9 +1,46 @@
 \documentclass[../../main.tex]{subfiles}
 
 \begin{document}
-    \begin{abstract}
-        
-    \end{abstract}
+\begin{abstract}
 
-    \pagebreak
+This paper provides a general view about steganalysis with hints to
+steganography. 
+
+Steganography is the art of hide information into a cover type (the mean of
+transmission used to hide the message) \cite{steganography-definition}.
+Steganalysis is the analysis used to find whether in a cover type there is an
+hidden message.
+
+We will cover the state of art of the most important and used methods of
+steganalysis for different cover types:
+
+\begin{itemize}
+    \item images: stego-key search, difference image histogram method, closest
+          color pair method, JPEG steganalysis
+    \item audio: non compressed and compressed methods, phase coding, Mp3
+          steganalysis
+    \item text
+    \item TCP/IP
+\end{itemize}
+
+Moreover, we will give describe the general types of analysis that one can
+perform:
+\begin{multicols}{2}
+    \begin{itemize}
+        \item statical
+        \item visual
+        \item spread spectrum
+        \item signature
+        \item transform domain
+        \item universal
+    \end{itemize}
+\end{multicols}
+
+At the end we will conclude explaining why steganography and steganalysis are
+important, also joining those two subjects with a wider theme like security in
+sending information.
+
+\end{abstract}
+
+\pagebreak
 \end{document}
