Sections re-set

--- a/report/sections/02_Steganography/02_Steganography.tex
+++ b/report/sections/02_Steganography/02_Steganography.tex
@@ -14,7 +14,7 @@ Here we can make a distinction between steganography and watermarking since in
 both cases a message is encoded into a communication's mean, but with different
 purposes.
 
-\subsection{Steganography}
+\subsection{Methods}
 
 Steganographic methods may be grouped under two different classifications.
 
