--- a/report/sections/04_Images/04_Images.tex
+++ b/report/sections/04_Images/04_Images.tex
@@ -168,9 +168,9 @@ at determining whether an image shows distorsion from embedding hidden data.
         $y_i = n_{2i}$
     \item The chi-square distribution for the difference between the
         expected and the observed DCT coefficients is calculated as follows:
-        $$ \chi^2 = \sum_{i=1}^{\ni+1}
+        $$ \chi^2 = \sum_{i=1}^{\nu+1}
         \frac{\left( y_i-y_{i}^{*}\right)}{y_{i}^{*}}$$
-        where $\ni$ are the degrees of freedom, which are one less than the
+        where $\nu$ are the degrees of freedom, which are one less than the
         categories in the DCT coefficients histogram
     \item The probability that there is an embedded message can be computed
         as the complement of the \emph{cumulative distribution function} of
