--- a/report/main.tex
+++ b/report/main.tex
@@ -20,15 +20,15 @@
         \Large
         \textbf{Steganalysis}
             
-        \vspace{0.4cm}
+        \vspace{0.3cm}
         \large
         Cybersecurity and National Defence
             
         \vspace{0.4cm}
-        Alberto Eusebio, Francesco Imparato, Federico Morro,\\
+        \small Alberto Eusebio, Francesco Imparato, Federico Morro,\\
         Salvatore Orlando, Giulia Rivetti
         
-        \vspace{0.7cm}
+        \vspace{0.5cm}
     \end{center}
 
     \subfile{sections/00_Abstract/00_Abstract.tex}
