Used noitemsep on itemize

--- a/report/main.tex
+++ b/report/main.tex
@@ -11,6 +11,7 @@
 \usepackage[sorting=none]{biblatex}
 \usepackage{graphicx}
 \usepackage{subfiles}
+\usepackage{enumitem}
 
 \addbibresource{references.bib}
 \graphicspath{ {../assets/} }
