--- a/report/sections/04_Images/04_Images.tex
+++ b/report/sections/04_Images/04_Images.tex
@@ -98,7 +98,7 @@ then, we define the following values:
 As found out by X. Ping and T. Zhang in
 \cite{new-detection-lsb-steganography}:
 
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item if $\alpha_i \approx 1, \forall i \in \{-255, -254, ..., 255\}$
           then the image contains some hidden message;
     \item otherwise, for natural images, $\alpha_i \approx \gamma_i$ is
@@ -121,7 +121,7 @@ the number of close color pairs in both images.
 
 Now, we define:
 
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item $P$ as the number of close color pairs; $P'$ as the number of
           close color pairs of the stegoimage;
     \item $U$ as the number of color pairs; $U'$ as the number of color
