--- a/report/sections/05_Audio/05_Audio.tex
+++ b/report/sections/05_Audio/05_Audio.tex
@@ -116,7 +116,7 @@ The sampling window is moved over the length of the signal and the cepstrum
 recomputed each time.
 Then, the results can be analyzed by classifying every sampled cepstrum in
 one of four possible categories:
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item Inside a zero embedded segment
     \item Inside a one embedded segment
     \item Crossing from a one(zero) to a zero(one)
