--- a/report/sections/06_Text/06_Text.tex
+++ b/report/sections/06_Text/06_Text.tex
@@ -38,7 +38,7 @@ correction in order to make the message readable again(whenever this is
 possible).
 To summarize the principal charachteristics of the message sent by Alice
 are:
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item \emph{invisibility}: the message should not be noted by Eve
     \item \emph{capacity}: the CM must be large enough to embedd all the SM
     \item \emph{distortion roboustness}: the SM should resist the noise
