--- a/report/sections/09_Conclusions/09_Conclusions.tex
+++ b/report/sections/09_Conclusions/09_Conclusions.tex
@@ -11,7 +11,7 @@ developlment of studies on signal processing jointly with information security
 services. Steganography is not the only way one can hide informations, there are
 multiple options, each one of them with a specific target:
 
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item encryption: confidentiality
     \item watermarking: copyright protection
     \item steganography: privacy that can also prevent traffic analysis
@@ -37,7 +37,7 @@ At this point we can easily understand that the steganography method is
 ``\emph{broken}'' simply when steganalysis is able to detect that in the cover
 type there is a hidden message. In general we can also distinguish between
 
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item \emph{passive steganalysis} which simply detects the message without
           knowing anything else
     \item \emph{active steganalysis} which detects the message with some extra
