--- a/report/sections/00_Abstract/00_Abstract.tex
+++ b/report/sections/00_Abstract/00_Abstract.tex
@@ -14,7 +14,7 @@ hidden message.
 We will cover the state of art of the most important and used methods of
 steganalysis for different cover types:
 
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item images: stego-key search, difference image histogram method, closest
           color pair method, JPEG steganalysis
     \item audio: non compressed and compressed methods, phase coding, Mp3
@@ -26,7 +26,7 @@ steganalysis for different cover types:
 Moreover, we will give describe the general types of analysis that one can
 perform:
 \begin{multicols}{2}
-    \begin{itemize}
+    \begin{itemize}[noitemsep]
         \item statical
         \item visual
         \item spread spectrum
