Images on UDP in TCP/IP section put side by side

--- a/report/main.tex
+++ b/report/main.tex
@@ -12,6 +12,8 @@
 \usepackage{graphicx}
 \usepackage{subfiles}
 \usepackage{enumitem}
+\usepackage{caption}
+\usepackage{subcaption}
 
 \addbibresource{references.bib}
 \graphicspath{ {../assets/} }
@@ -19,17 +21,13 @@
 \begin{document}
     \begin{center}
         \Large
-        \textbf{Steganalysis}
+        \textbf{Steganalysis} -- Cybersecurity and National Defence
             
         \vspace{0.3cm}
-        \large
-        Cybersecurity and National Defence
-            
-        \vspace{0.4cm}
         \small Alberto Eusebio, Francesco Imparato, Federico Morro,\\
         Salvatore Orlando, Giulia Rivetti
         
-        \vspace{0.5cm}
+        \vspace{0.3cm}
     \end{center}
 
     \subfile{sections/00_Abstract/00_Abstract.tex}
