--- a/report/sections/00_Abstract/00_Abstract.tex
+++ b/report/sections/00_Abstract/00_Abstract.tex
@@ -1,7 +1,12 @@
 \documentclass[../../main.tex]{subfiles}
 
 \begin{document}
-\begin{abstract}
+
+\begin{center}
+    \center \textbf{Abstract}
+\end{center}
+
+\vspace{0.1cm}
 
 This paper provides a general view about steganalysis with hints to
 steganography. 
@@ -12,34 +17,17 @@ Steganalysis is the analysis used to find whether in a cover type there is an
 hidden message.
 
 We will cover the state of art of the most important and used methods of
-steganalysis for different cover types:
-
-\begin{itemize}[noitemsep]
-    \item images: stego-key search, difference image histogram method, closest
-          color pair method, JPEG steganalysis
-    \item audio: non compressed and compressed methods, phase coding, Mp3
-          steganalysis
-    \item text
-    \item TCP/IP
-\end{itemize}
+steganalysis for different cover types: images (stego-key search, difference
+image histogram method, closest color pair method, JPEG steganalysis), audio
+(non compressed and compressed methods, phase coding, Mp3 steganalysis), text
+and TCP/IP.
 
 Moreover, we will give describe the general types of analysis that one can
-perform:
-\begin{multicols}{2}
-    \begin{itemize}[noitemsep]
-        \item statical
-        \item visual
-        \item spread spectrum
-        \item signature
-        \item transform domain
-        \item universal
-    \end{itemize}
-\end{multicols}
+perform: statical, visual, spread spectrum, signature, transform domain,
+universal.
 
 At the end we will conclude explaining why steganography and steganalysis are
 important, also joining those two subjects with a wider theme like security in
 sending information.
-
-\end{abstract}
 
 \end{document}
