Typos & format adjustments

--- a/report/sections/06_Text/06_Text.tex
+++ b/report/sections/06_Text/06_Text.tex
@@ -2,7 +2,6 @@
 
 \begin{document}
     
-
 \section{Text}
 In this section we will illustrate in general the principle of work of the
 MTHS using the famous Simmons' prisoner problem.
@@ -106,7 +105,7 @@ algorithm(\emph{AH4s}) is used to generate a long(and usually meaninglsess)
 text from the specified SM.
 The latter method is indeed very visible and also computationally expensive.
 
-\subsection{steganalysis}
+\subsection{Steganalysis}
 
 \subsubsection{Visual steganalysis}
 This is a human powered technique which simply consists in reading the texts
