Fixed 'Steganalysis techniques' image in Steganalysis section

--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -17,7 +17,7 @@
     \begin{figure}[h]
         \centering
         \caption{Steganalysis techniques}
-        \includegraphics[scale=0.4]{classification_steganalysis.png}
+        \vstretch{0.8}{\includegraphics[scale=0.4]{classification_steganalysis.png}}
     \end{figure}
 
 
