--- a/report/main.tex
+++ b/report/main.tex
@@ -14,6 +14,8 @@
 \usepackage{enumitem}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{graphicx}
+\usepackage{scalerel}
 
 \addbibresource{references.bib}
 \graphicspath{ {../assets/} }
